--- a/styles/main.css
+++ b/styles/main.css
@@ -6,8 +6,8 @@ margin: 0 auto ;
 
 
 header {
-  background-image: url(image/background.jpg);
-min-height: 80vh;
+background-image: url(image/background.jpg);
+min-height: 130vh;
 background-repeat: no-repeat;
 background-position: center top;
 background-size: cover;
@@ -15,20 +15,28 @@ display: flex;
 align-items: center;
 text-align: right;
 justify-content:  flex-end;
-
-
-
-
 }
+
+
+
 .cover
 {
   background-color: tranparent;
   padding: 2em ;
   background-image: url(image/dechire.png);
-  border : 1px solid #FFF ;
   background-position: right;
   background-repeat: no-repeat;
+  background-size: 200% ;
+  min-height: 90vh;
+  
+
+
 }
+.div {
+  display: block ;
+
+}
+
 
 
 .nastyadvert {
@@ -38,7 +46,26 @@ justify-content:  flex-end;
   min-height: 90vh;
   position: relative;
 
+
 }
+.myicones {
+
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  flex-wrap: wrap;
+  max-width: 100%;
+}
+
+.myicones img {
+  width: 25%;
+  height: 25%;
+  display: block;
+  margin-left:30px;
+  margin-right: 30px;
+}
+
 .mypictures{
 
 
