--- a/styles/typo.css
+++ b/styles/typo.css
@@ -1,44 +1,46 @@
 body{
-font-family: 'Josefin Slab', serif;
+font-family: 'Cutive Mono', serif;
 font-weight: 400;
 line-height: 1.45;
 
 
 }
 h1, h2, h3, h4 {
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Cutive Mono', serif;
   margin: 1.414em 0 0.5em;
   font-weight: inherit;
   line-height: 1.2;
 }
 
-p {margin-bottom: 1.3em;}
+p {
+  font-family: 'Cutive Mono', serif;
+  font-size: 0.75em;
+  margin-bottom: 1.3em;}
 
 
 h1 {
   margin-top: 0;
-  font-size: 4.063em;
+  font-size: 1.6em;
 
 }
 
-h2 {font-size: 3.375em;
+h2 {font-size: 1.375em;
 text-align: center;}
 
-h3 {font-size: 2.25em;
+h3 {font-size: 4.25em;
 text-align: center;}
 
-h4 {font-size: 1.26em;
+h4 {font-size: 1.46em;
 text-align: center;}
 
 small, .font_small {font-size: 0.667em;}
 
-.nastyadvert h1 {
-  font-family: 'Josefin Slab', serif;
+.nastyadvert h3 {
+  font-family: 'Cutive Mono', serif;
   text-align: center;
   color: #fff;
   position: absolute;
   top: 50%;
-
-  transform: translateX(50%)translateY(-50%);
+  transform: translateX(30%)translateY(-155%);
 
 }
